# open-researcher

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  demo.py  pyproject.toml  run_demo.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: cancel-on-merge.yml  ci.yml  codeql.yml  publish.yml
docs/: architecture-review.md  open_researcher_v2_acceptance_matrix.md  project_audit_matrix.md  project_remediation_backlog.md  repo_inventory.md  tui-design-comparison.md
docs/assets/: demo-start.tape  demo-tabs.tape  tui-layout.mmd  workflow.mmd
docs/plans/: 2026-03-09-tui-simplification-design.md  2026-03-09-tui-simplification-plan.md  2026-03-15-crash-retry-design.md  2026-03-15-crash-retry-implementation.md  2026-03-18-remove-v1-rename-v2.md  2026-03-18-tui-skills-rewrite.md  2026-03-19-human-in-the-loop-impl.md
examples/cartpole/: README.md  requirements.txt  train.py
examples/cifar10-speedrun/: README.md
examples/code-perf/: README.md  bench.py  parser.py  requirements.txt
examples/hf-glue/: README.md
examples/hf-glue/.research/: config.yaml  evaluation.md  project-understanding.md  results-sample.tsv
examples/liger-kernel/: README.md
examples/nanogpt/: README.md
examples/whisper-finetune/: README.md
examples/yolo-tiny/: README.md
src/open_researcher/: __init__.py  activity.py  agent_runtime.py  benchmark_smoke.py  bootstrap.py  cli.py  config.py  config_cmd.py  control_plane.py  demo_cmd.py  doctor_cmd.py  event_journal.py  export_cmd.py  failure_memory.py  gpu_manager.py  graph_context.py  graph_protocol.py  headless.py  hub.py  hub_cmd.py  idea_pool.py  ideas_cmd.py  init_cmd.py  logs_cmd.py  memory_policy.py  parallel_runtime.py  research_events.py  research_graph.py  research_loop.py  research_memory.py  results_cmd.py  role_programs.py  run_cmd.py  start_cmd.py  status_cmd.py  storage.py  token_tracking.py  worker.py  worker_plugins.py  workspace_paths.py  (+1 more)
src/open_researcher/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  kimi.py  opencode.py
src/open_researcher/dashboard/: app.py
src/open_researcher/kernel/: __init__.py  bus.py  event.py  kernel.py  store.py
src/open_researcher/scripts/: launch_detached.py  record.py
src/open_researcher/templates/: config.yaml.j2  critic_program.md.j2  scout_program.md.j2  (+3 more)
src/open_researcher_v2/: agent.py  cli.py  parallel.py  skill_runner.py  state.py
src/paperfarm/: __init__.py  activity.py  agent.py  agent_runtime.py  bootstrap.py  cli.py  config.py  config_cmd.py  control_plane.py  crash_counter.py  demo_cmd.py  doctor_cmd.py  event_journal.py  export_cmd.py  failure_memory.py  git_identity.py  git_safety.py  gpu_manager.py  graph_context.py  graph_protocol.py  headless.py  idea_pool.py  ideas_cmd.py  init_cmd.py  log_output.py  logs_cmd.py  memory_policy.py  parallel.py  parallel_runtime.py  phase_gate.py  research_events.py  research_graph.py  research_loop.py  research_memory.py  resource_scheduler.py  results_cmd.py  run_cmd.py  status_cmd.py  storage.py  token_tracking.py  (+6 more)
tests/: test_activity.py  test_agent.py  test_agent_token_parsing.py  test_agents.py  test_app_state.py  test_benchmark_smoke.py  test_bootstrap.py  test_brainstorm_round2_fixes.py  test_brainstorm_round3_fixes.py  test_brainstorm_round3_p1p2_fixes.py  test_brainstorm_round5_fixes.py  test_claude_code_token_parsing.py  test_cli.py  test_config.py  test_config_cmd.py  test_control_plane.py  test_crash_counter.py  test_dashboard.py  test_demo.py  test_doctor.py  test_export.py  test_failure_memory.py  test_git_safety.py  test_gpu_manager.py  test_gpu_scheduling_stress.py  test_graph_context.py  test_graph_protocol.py  test_headless.py  test_headless_flow.py  test_hub_audit_fixes.py  test_idea_pool.py  test_ideas_cmd.py  test_init.py  test_integration.py  test_logs_cmd.py  test_memory_policy.py  test_package_alias.py  test_parallel.py  test_parallel_runtime.py  test_phase_gate.py  (+28 more)
tests/integration/: test_headless_e2e.py  test_kernel_integration.py
tests/v2/: test_cli.py  test_integration.py  test_parallel.py  test_record_script.py  test_review_modals.py  test_rollback_script.py  test_skill_runner.py  test_skill_templates.py  test_state.py  test_tui_app.py  test_tui_widgets.py
(+103 files in other folders)
