[project]
name = "open-researcher"
version = "0.1.0"
description = "Research workflow framework for AI agents — initialize, track, and visualize automated experiments in any repo"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
open-researcher = "open_researcher.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
